Fixed wrapping issues with region

--- a/GuildWarsPartySearch.NodeJSServer/src/css/utilities.scss
+++ b/GuildWarsPartySearch.NodeJSServer/src/css/utilities.scss
@@ -69,3 +69,9 @@
 .w-40 {
   width:40%;
 }
+.minw-5rem {
+  min-width:5rem !important;
+}
+.minw-10rem {
+  min-width:10rem !important;
+}
